--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,13 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Ubuntu:wght@300;400;500;700&display=swap');
 .NavBar {
-    background-color: #D4ECDD;
+    background-color: #2F5D62;
     overflow: hidden;
     z-index: 5;
     width: 100%;
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .NavBar a {
     display: block;
     float: left;
+    padding: 0.7em 0.8em;
+    text-decoration: none;
+    font-size: 0.8em;
+    font-weight: 500;
+    color: #DFEEEA;
+}
+
+.NavBar a.logo {
+    padding-right: 1.5em;
+    padding-left: 1.2em;
+    color: rgb(255, 193, 79);
+    font-weight: 700;
+}
+
+.NavBar .option {
+    text-transform: uppercase;
 }
 
 .NavBar .hamburger {
@@ -21,6 +41,7 @@
     .NavBar .hamburger {
         display: block;
         float: right;
+        padding-right: 1.2em;
     }
     .NavBar.responsive {
         position: relative;
@@ -29,6 +50,7 @@
         float: none;
         display: block;
         text-align: left;
+        padding-left: 1.2em;
     }
     .NavBar.responsive a.hamburger {
         position: absolute;
